k8s/react-frontend-app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: ameen2607-dev
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
